found bug on mobile, testing theory with this commit

--- a/styles/main.css
+++ b/styles/main.css
@@ -90,7 +90,7 @@ body{
 }
 
 .search-artist-text{
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .add-artist-btn{
